Fix z-index issue that was accidentally taken out

--- a/Resources/Deal.css
+++ b/Resources/Deal.css
@@ -38,6 +38,7 @@ img {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 100;
 }
 .date span {
     display: table-cell;
